# SphereImageProcessor

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_equirectangular.sh  run_fisheye.sh
src/fisheye/: README.md  parameter.py
src/fisheye/processors/: README.md
src/sphere_image/: __init__.py
src/sphere_image/equirectangular/: __init__.py  __main__.py  method.py  parameter.py  processor.py
src/sphere_image/equirectangular/processors/: __init__.py  perspective.py
src/sphere_image/fisheye/: README.md  __init__.py  __main__.py  method.py  parameter.py  processor.py
src/sphere_image/fisheye/processors/: README.md  __init__.py  __main__.py  equidistant.py  equisolid.py  orthographic.py  stereographic.py
src/sphere_image/fisheye/processors/utils/: __init__.py  equidistant_cli.py
src/sphere_image/utils/: __init__.py  basis.py  spherical_coordinates.py
